recipe-cicd/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: recipe.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: recipe-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipe-client
                port:
                  number: 80
